# c-sdl-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  main.c
